fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   background: #0000b0;
   font-family: var(--font-depot-new);
+  width: 104%;
 }
 
 *,
